--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,6 @@
 %h1 Home#index
-%p Find me in app/views/home/index.html.haml
+%p 
+	- if current_user.blank?
+		= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
+	- else
+		== Hi #{current_user.name}
