--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
-%h1 Home#index
-%p 
+%h1 Welcome to Facebook Insights
+%p
 	- if current_user.blank?
 		= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
 	- else
