--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -18,33 +18,41 @@
     = javascript_include_tag "application"
 
 
-  %body
+  %body{style: "padding-bottom: 60px;"}
     .navbar.navbar-default.navbar-static-top
       .container
         %button.navbar-toggle(type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse")
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand(href="#") Insight
+        %a.navbar-brand(href="#") FB Insights
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav
-            %li= link_to "Link 1", "/path1"
-            %li= link_to "Link 2", "/path2"
-            %li= link_to "Link 3", "/path3"
-            %li= link_to "Link 3", "/path3"
+            %li= link_to "Home", root_path
+          %ul.nav.navbar-nav.navbar-right
+            - if current_user.blank?
+              %li
+                = link_to user_omniauth_authorize_path(:facebook) do
+                  Login
+                  %i.fa.fa-facebook
+            - else
+              %li
+                = link_to "#" do 
+                  Hi #{current_user.name}
+              %li= link_to "Logout", destroy_user_session_path
 
     .container
+      = bootstrap_flash
       .row
         .col-lg-9
-          = bootstrap_flash
           = yield
-        .col-lg-3
-          .well.sidebar-nav
-            %h3 Sidebar
-            %ul.nav.nav-list
-              %li.nav-header Sidebar
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
-      %footer
-        %p &copy; Company 2015
+        - if current_user
+          .col-lg-3
+            .well.sidebar-nav
+              %h3 Sample Pages
+              %ul.nav.nav-list
+                %li= link_to "Link 1", "/path1"
+                %li= link_to "Link 2", "/path2"
+                %li= link_to "Link 3", "/path3"
+      %footer{style: "position: fixed;  bottom: 0;"}
+        %p &copy; FB Insights 2015
