--- a/app/views/home/dashboard.html.haml
+++ b/app/views/home/dashboard.html.haml
@@ -3,18 +3,23 @@
   .input-group
     %span.input-group-addon
       %i.fa.fa-facebook
-    %input#fbtk(type="text" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Ex: fb id, fb name, post id")
+    %input#fbtk(type="text" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Ex: fb id, fb name, post id" value="#{params[:query]}")
     %a.input-group-addon.btn#btnGo GO
 
 .row#results
 
 :javascript
+  function findQuery(){
+    var query = $('#fbtk').val();
+    if(query && query!=''){
+      $('#btnGo').attr('disabled', true);
+      $.get('/search', {query: query})
+    }
+
+  };
   $(document).ready(function(){
     $("#btnGo").click(function(){
-      var query = $('#fbtk').val();
-      if(query && query!=''){
-        $('#btnGo').attr('disabled', true);
-        $.get('/search', {query: query})
-      }
+      findQuery();
     });
+    findQuery();
   });
