--- a/app/views/home/search.js.haml
+++ b/app/views/home/search.js.haml
@@ -5,9 +5,10 @@
 	$("#results").html("")
 	- if @resp["username"].blank?
 		$("#results").append("#{escape_javascript(render partial: "post_info", locals: {resp: @resp})}");
+		$.get("/get_insights", {query: "#{params[:query]}", insight: 'post'});
 	- else
 		$("#results").append("#{escape_javascript(render partial: "page_info", locals: {resp: @resp})}");
 		$.get("/get_posts", {query: "#{params[:query]}"});
-	$.get("/get_insights", {query: "#{params[:query]}"});
+		$.get("/get_insights", {query: "#{params[:query]}", insight: 'page'});
 
 	$("#btnGo").removeAttr('disabled')
