--- a/app/views/influencers_home/index.html.erb
+++ b/app/views/influencers_home/index.html.erb
@@ -13,7 +13,6 @@
           <span class="icon-bar"></span>
         </button>
       </div>
-      
 
       <div class="collapse navbar-collapse home-menu" id="myNavbar">
         <ul class="nav navbar-nav my-nav-bar">
@@ -21,15 +20,18 @@
           <li><a href="#">BRANDS</a></li>
           <li><a href="#">ABOUT US</a></li>
           <% if user_signed_in? %>
-          <li><a href="<%= destroy_user_session_path %>">LOG OUT</a></li>
+              <li><a href="<%= destroy_user_session_path %>">LOG OUT</a></li>
+          <% else %>
+              <li><a href="<%= new_user_session_path %>">LOGIN</a></li>
           <% end %>
-          <li><a href="<%= new_user_session_path %>">LOGIN</a></li>
-          <li><%= link_to("SIGN UP FREE", new_user_registration_path, :class => "btn-custom btn-theme text-white") %></li>
+          <li><%= link_to "SIGN UP FREE", "#loginModal", "data-toggle" => "modal", :class => "btn-custom btn-theme text-white" %></li>
         </ul>
       </div>
     </nav>
   </div>
 </div>
+
+<%= render partial: "shared/login_social_network_modal"%>
 
 <div class="identity">
   <div class="wrapper-content">
@@ -189,4 +191,6 @@
     $(document).ready(function () {
         $('[data-toggle="popover"]').popover({trigger: 'hover', placement: "auto bottom"});
     });
+
+
 </script>
