--- a/app/assets/stylesheets/influencers_home.scss
+++ b/app/assets/stylesheets/influencers_home.scss
@@ -39,11 +39,11 @@
 }
 
 .social-accounts-logo {
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .login-modal-body .social-accounts-logo a {
-  background-color: #bfbfbf;
+  background-color: #e6e6e6;
   color: #3a3a3a;
   padding: 14px 25px;
   text-decoration: none;
