- add public page with hom, brand_home action for control public page

--- a/app/views/shared/_login_social_network_modal.html.erb
+++ b/app/views/shared/_login_social_network_modal.html.erb
@@ -20,7 +20,7 @@
         <div class="login-modal-footer">
           <p>Note: </p>
           <p>Only the networks you connect will be visible to brands.</p>
-          <p>If you are brand, please reach out to us <%= link_to "here", brands_home_index_path %></p>
+          <p>If you are brand, please reach out to us <%= link_to "here", brand_home_public_index_path %></p>
         </div>
       </div>
     </div>
