--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -1,1 +1,125 @@
-<h2>Profile Edit page</h2>
+<%= stylesheet_link_tag  'profile.css', media: 'all' %>
+
+<% title "BrandReach Profile" %>
+
+<div class="brands-profile-page-wrapper">
+  <%= image_tag('user2-160x160.jpg', :class => 'profile-picture', :alt => "profile-picture") %>
+  <h4 class="personal-info">PERSONAL INFORMATION</h4>
+
+  <%= form_for :profile, html: { class: "form-horizontal personal-info-form"} do |f| %>
+
+      <div class="form-group">
+        <div class="col-md-6">
+          <%= f.label :first_name %>:
+          <%= f.text_field :first_name %>
+        </div>
+        <div class="col-md-6">
+          <%= f.label :last_name %>:
+          <%= f.text_field :last_name %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-md-6">
+          <%= f.label :company_name %>:
+          <%= f.text_field :company_name %>
+        </div>
+        <div class="col-md-6">
+          <%= f.label :company_email %>:
+          <%= f.text_field :company_email %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-md-6">
+          <%= f.label :industry %>:
+          <%= f.text_field :industry %>
+        </div>
+        <div class="col-md-6">
+          <%= f.label :phone %>:
+          <%= f.text_field :phone %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-md-6">
+          <label for="country">Country</label>
+          <select class="profile-dropdown-color" id="country">
+            <option>Country 1</option>
+            <option>Country 2</option>
+            <option>Country 3</option>
+          </select>
+
+        </div>
+        <div class="col-md-6">
+          <label for="state">State</label>
+          <select class="profile-dropdown-color" id="state">
+            <option>State 1</option>
+            <option>State 2</option>
+            <option>State 3</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-12">
+              <%= f.label :city %>:
+              <%= f.text_field :city %>
+            </div>
+            <div class="col-md-12">
+              <%= f.label :zip_code %>:
+              <%= f.text_field :zip_code %>
+            </div>
+            </div>
+            <div class="col-md-12">
+              <%= f.label :landmark %>:
+              <%= f.text_field :landmark %>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <%= f.label :street_address %>:
+          <%= f.text_area :street_address, rows: 4, class: 'street-address-textarea', id: 'street', placeholder: "Enter your address here" %>
+        </div>
+      </div>
+
+      <h4 class="account-setup">ACCOUNT SETUP</h4>
+
+      <div class="form-group">
+        <div class="col-md-6">
+          <label for="old_password" class="">Old Password</label>
+          <input type="password" class="" id="old_password"/>
+        </div>
+        <div class="col-md-6">
+          <label>&nbsp;</label>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-md-6">
+          <label for="new_password" class="">New Password</label>
+          <input type="password" class="" id="new_password"/>
+        </div>
+        <div class="col-md-6">
+          <label for="retype_password" class="">Retype Password</label>
+          <input type="password" class="" id="retype_password"/>
+        </div>
+      </div>
+
+      <h4 class="company-info">COMPANY INFORMATION</h4>
+
+      <div class="form-group short-bio-row">
+        <div class="col-md-12">
+          <label for="short_bio" class="textarea-label">Short Bio</label>
+          <textarea class="short_bio" id="short_bio" rows="6"></textarea>
+        </div>
+      </div>
+
+      </div>
+
+      <%= f.submit  "UPDATE", class: 'btn btn-update' %>
+  <% end %>
+  <!-- end of main content -->
+</div>
