--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,6 +20,6 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{provider.to_s.titleize}", user_omniauth_authorize_path(provider) %><br />
+    <%= link_to "Sign in with #{provider.to_s.titleize}", user_omniauth_authorize_path(provider, brands: true) %><br />
   <% end -%>
 <% end -%>
