Profile page form_for remaining field added

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -131,7 +131,7 @@
   margin-bottom: 50px;
 }
 
-.brands-profile-page-wrapper .personal-info-form input, .brands-profile-page-wrapper .personal-info-form textarea {
+.brands-profile-page-wrapper input, .brands-profile-page-wrapper textarea {
   padding-left: 5px;
 }
 
