--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -2,32 +2,32 @@
 
 <% title "BrandReach Profile" %>
 
-<%= form_for @user, :url => {:controller => "profile", :action => "update"}, html: { class: "form-horizontal personal-info-form"} do |f| %>
+<div class="brands-profile-page-wrapper">
 
-    <div class="brands-profile-page-wrapper">
+  <%= form_for @user, :url => {:controller => "profile", :action => "update"}, html: { class: "form-horizontal personal-info-form"} do |f| %>
       <%= image_tag('user2-160x160.jpg', :class => 'profile-picture', :alt => "profile-picture") %>
 
       <h4 class="personal-info">PERSONAL INFORMATION</h4>
 
       <div class="form-group">
         <div class="col-md-6">
-          <%= f.label :first_name %>
+          <%= f.label :first_name, "First Name" %>
           <%= f.text_field :first_name %>
         </div>
         <div class="col-md-6">
-          <%= f.label :last_name %>
+          <%= f.label :last_name, "Last Name" %>
           <%= f.text_field :last_name %>
         </div>
       </div>
 
       <div class="form-group">
         <div class="col-md-6">
-          <%= f.label :company_name %>
+          <%= f.label :company_name, "Company Name" %>
           <%= f.text_field :company_name %>
         </div>
         <div class="col-md-6">
-          <%= f.label :email %>
-          <%= f.text_field :email %>
+          <%= f.label :company_email, "Company Email" %>
+          <%= f.text_field :company_email %>
         </div>
       </div>
 
@@ -44,20 +44,15 @@
 
       <div class="form-group">
         <div class="col-md-6">
-          <label for="country">Country</label>
-          <select class="profile-dropdown-color" id="country">
-            <option>Country 1</option>
-            <option>Country 2</option>
-            <option>Country 3</option>
-          </select>
-
+          <%= f.label :country %>
+          <%= f.select(:country, [['Country 1', 1], ['Country 2', 2], ['Country 3', 3], ['Country 4', 4], ['Country 5', 5]], {}, { :class => 'profile-dropdown-color'}) %>
         </div>
+
         <div class="col-md-6">
           <%= f.label :state %>
           <%= f.select(:state, [['State 1', 1], ['State 2', 2], ['State 3', 3], ['State 4', 4], ['State 5', 5]], {}, { :class => 'profile-dropdown-color'}) %>
         </div>
       </div>
-
       <div class="form-group">
         <div class="col-md-6">
           <div class="row">
@@ -81,12 +76,25 @@
         </div>
       </div>
 
+      <h4 class="company-info">COMPANY INFORMATION</h4>
+
+      <div class="form-group short-bio-row">
+        <div class="col-md-12">
+          <%= f.label :short_bio, "Short Bio", class: 'textarea-label' %>
+          <%= f.text_area :short_bio, rows: 6, class: 'short_bio' %>
+        </div>
+      </div>
+      <%= f.submit  "UPDATE", class: 'btn btn-update' %>
+  <% end %>
+
+  <%= form_for @user, :url => {:controller => "profile", :action => "update"}, html: { class: "form-horizontal personal-info-form"} do |f| %>
+
       <h4 class="account-setup">ACCOUNT SETUP</h4>
 
       <div class="form-group">
         <div class="col-md-6">
-          <label for="old_password" class="">Old Password</label>
-          <input type="password" class="" id="old_password"/>
+          <%= f.label :current_password, "Old Password" %>
+          <%= f.password_field :current_password %>
         </div>
         <div class="col-md-6">
           <label>&nbsp;</label>
@@ -96,23 +104,13 @@
       <div class="form-group">
         <div class="col-md-6">
           <%= f.label :password, "New Password" %>
-          <%= f.text_field :password %>
+          <%= f.password_field :password %>
         </div>
         <div class="col-md-6">
           <%= f.label :password_confirmation, "Retype Password" %>
-          <%= f.text_field :password_confirmation %>
+          <%= f.password_field :password_confirmation %>
         </div>
       </div>
-
-      <h4 class="company-info">COMPANY INFORMATION</h4>
-
-      <div class="form-group short-bio-row">
-        <div class="col-md-12">
-          <%= f.label :short_bio, class: 'textarea-label' %>
-          <%= f.text_area :short_bio, rows: 6, class: 'short_bio' %>
-        </div>
-      </div>
-    </div>
-    <%= f.submit  "UPDATE", class: 'btn btn-update' %>
-
-<% end %>
+      <%= f.submit  "UPDATE", class: 'btn btn-update' %>
+  <% end %>
+</div>
