--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -128,7 +128,15 @@
 }
 
 .personal-info-form .short-bio-row {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
+}
+
+.divider-personal-info-password {
+    border-color: #DDDDDD;
+    border-style: solid none;
+    border-width: 1px 0;
+    margin-left: -40px;
+    margin-right: -50px;
 }
 
 .brands-profile-page-wrapper input, .brands-profile-page-wrapper textarea {
