Update password with previous password added; Error flash messsage form added

--- a/app/views/layouts/sidebar_header_layouts.html.erb
+++ b/app/views/layouts/sidebar_header_layouts.html.erb
@@ -121,6 +121,7 @@
 
     <!-- main content -->
     <div class="main-content">
+      <%= render partial: "shared/flash_messages", flash: flash %>
 
       <%= yield %>
 
