--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -31,7 +31,7 @@
   </div>
 </div>
 
-<%= render partial: "shared/login_social_network_modal"%>
+<%= render partial: 'shared/login_social_network_modal'%>
 
 <div class="identity">
   <div class="wrapper-content">
