--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -24,7 +24,7 @@
           <% else %>
               <li><a href="<%= new_user_session_path %>">LOGIN</a></li>
               <li><%= link_to "SIGN UP FREE", "#loginModal", "data-toggle" => "modal", :class => "btn-custom btn-theme text-white" %></li>
-        <% end %>
+          <% end %>
         </ul>
       </div>
     </nav>
@@ -123,45 +123,45 @@
     <div class="row contact-form">
       <div class="col-md-7 col-sm-8 col-xs-12">
         <div class="text-top col-md-12"> Get in touch!</div>
-        <form action="#" method="post">
-          <div class="row">
-            <div class="col-md-12 col-sm-12 col-xs-12">
-              <div class="form-group">
-                <input type="text" class="form-control" name="full_name" placeholder="Full Name"/>
-              </div>
-            </div>
-          </div>
 
-          <div class="row">
-            <div class="col-md-6 col-sm-6 col-xs-12 clear-padding-margin">
-              <div class="form-group">
-                <input type="email" class="form-control" name="email" placeholder="Email"/>
+        <%= form_tag get_in_touch_public_index_path do %>
+            <div class="row">
+              <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="form-group">
+                  <input type="text" class="form-control" name="full_name" placeholder="Full Name"/>
+                </div>
               </div>
             </div>
 
-            <div class="col-md-6 col-sm-6 col-xs-12 clear-padding-margin only-right-padding">
-              <div class="form-group">
-                <input type="email" class="form-control" name="email" placeholder="Phone Number"/>
+            <div class="row">
+              <div class="col-md-6 col-sm-6 col-xs-12 clear-padding-margin">
+                <div class="form-group">
+                  <input type="email" class="form-control" name="email" placeholder="Email"/>
+                </div>
               </div>
-            </div>
-          </div>
 
-          <div class="row">
-            <div class="col-md-12 col-sm-12 col-xs-12">
-              <div class="form-group">
-                <textarea class="form-control" placeholder="Message" rows="6"></textarea>
+              <div class="col-md-6 col-sm-6 col-xs-12 clear-padding-margin only-right-padding">
+                <div class="form-group">
+                  <input type="text" class="form-control" name="phone_number" placeholder="Phone Number"/>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="row">
-            <div class="col-md-12">
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-submit ">SUBMIT</button>
+            <div class="row">
+              <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="form-group">
+                  <textarea class="form-control" name="message" placeholder="Message" rows="6"></textarea>
+                </div>
               </div>
             </div>
-          </div>
-        </form>
+
+            <div class="row">
+              <div class="col-md-12">
+                <%= submit_tag "SUBMIT", class: "btn btn-primary btn-submit" %>
+              </div>
+            </div>
+        <% end %>
+
       </div>
     </div>
 
