--- a/app/views/layouts/sidebar_header_layouts.html.erb
+++ b/app/views/layouts/sidebar_header_layouts.html.erb
@@ -95,7 +95,7 @@
           <p class=" about">ABOUT</p>
 
           <p class=" welcome"> Welcome back, Bhanu Prasad!</p>
-          <a href="javascript:void(0);" class="login-link">
+          <a href="<%= destroy_user_session_path %>" class="login-link">
             <p class="text-black text-center"><i class="fa fa-power-off"></i></p>
           </a>
         </div>
