--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,7 @@
 <h2>Sign up</h2>
 
+<h4> Your are registering as <%= User.user_types.key(params[:user_type].to_i) %></h4>
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -20,6 +22,10 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+
+    <div class="field">
+      <%= f.hidden_field :user_type, html_options= { value: params[:user_type]} %>
+    </div>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
