Carmen Rails Added, State Change w.r.t Country, New Password and Retype Password match check added

--- a/app/views/layouts/sidebar_header_layouts.html.erb
+++ b/app/views/layouts/sidebar_header_layouts.html.erb
@@ -8,6 +8,7 @@
   <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
   <%= stylesheet_link_tag  'AdminLTE.min.css', media: 'all' %>
   <%= stylesheet_link_tag  'style.css', media: 'all' %>
+  <%= javascript_include_tag 'application'%>
   <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
 </head>
